--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ jobs:
     steps:
       - run: env
       - run: |
+          git config --global user.email "brad@bjc.id.au";
+          git config --global user.name "Brad Jones";
           git clone --progress "https://${HOMEBREW_GITHUB_TOKEN}@github.com/brad-jones/homebrew-tap.git" /tmp/homebrew-tap;
-          cat /tmp/homebrew-tap/.git/config;
           cd /tmp/homebrew-tap && echo "foo" > ./foo.txt && git add -A && git commit -m "chore(bogus): will revert later" && git push origin master;
       #- uses: actions/checkout@v2
       #- uses: ./.github/actions/cancel-redundant
