--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,9 @@ jobs:
       PUB_OAUTH_REFRESH_TOKEN: ${{ secrets.PUB_OAUTH_REFRESH_TOKEN }}
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          git config --global user.email "@semantic-release";
+          git config --global user.name "semantic-release-bot";
       - uses: actions/download-artifact@v1
         with:
           name: native-executables
@@ -101,7 +104,4 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: ${{ runner.os }}-
       - run: pnpm install
-      - run: |
-          git config --global user.email "brad@bjc.id.au";
-          git config --global user.name "Brad Jones";
-          pnpx semantic-release;
+      - run: pnpx semantic-release
