--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ executables:
 dependencies:
   args: ^1.5.3
   console: ^3.1.0
+  dexeca: ^1.0.1
+  dexecve: ^1.1.0
   io: ^0.3.3
   recase: ^3.0.0
 
