feat(global-options): allow options to be shared between tasks
Also included are changes that allow multiple makefiles to be
imported creating a hierarchical structure. This is very useful for
larger projects and/or monorepos. More details can be found
in the example.

BREAKING CHANGE: fairly significant changes although none are
breaking I believe, but without a test suite it's hard to say. If this is v2,
then v3 will include a full test suite, I promise :)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   console: ^3.1.0
   dexeca: ^1.0.1
   dexecve: ^1.1.0
+  dotenv: ^2.0.0
   io: ^0.3.3
   recase: ^3.0.0
+  stack_trace: ^1.9.3
 
 dev_dependencies:
   archive: ^2.0.13
