--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,17 @@ executables:
   drun:
 
 dependencies:
-  io: ^0.3.3
-  args: ^1.5.3
-  path: ^1.7.0
-  http: ^0.12.1
-  dexeca: ^1.0.1
-  dotenv: ^2.0.0
-  recase: ^3.0.0
-  console: ^3.1.0
-  dexecve: ^1.1.0
+  ansicolor: ^1.0.2
   archive: ^2.0.13
+  args: ^1.5.3
+  console: ^3.1.0
+  dexeca: ^1.0.1
+  dexecve: ^1.1.0
+  dotenv: ^2.0.0
+  http: ^0.12.1
+  io: ^0.3.3
+  path: ^1.7.0
+  recase: ^3.0.0
   stack_trace: ^1.9.3
 
 dev_dependencies:
