feat(runifnotfound): new function that only runs if files are not found

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   dexeca: ^1.0.1
   dexecve: ^1.1.0
   dotenv: ^2.0.0
+  glob: ^1.2.0
   http: ^0.12.1
   io: ^0.3.3
   path: ^1.7.0
