--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   glob: ^1.2.0
   http: ^0.12.1
   io: ^0.3.3
+  mustache_template: ^1.0.0+1
   path: ^1.7.0
   recase: ^3.0.0
   stack_trace: ^1.9.3
